[package]
name = "finding_borders"
version = "0.1.0"
edition = "2018"
description = """Finding Borders solution with KMP and naive comparison"""
authors = [ "Ranveer Kaur Maan Gulzar Singh <ranveermaan1702@gmail.com>" ]
default-run = "finding_borders"


[dependencies]


[dev-dependencies]
assert_cmd = "2.2.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.13"
zip = "0.6"
dotenvy = "0.15"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"